sandbox/output
GildedRoseTest.java:37: error: cannot find symbol
            .map(GildedRose.generateNormalItemsForSellByDateNotPassed());
                           ^
  symbol:   method generateNormalItemsForSellByDateNotPassed()
  location: class GildedRose
1 error
